--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "naturblick",
+  "name": "fractal-test",
   "version": "0.1.0",
   "dependencies": {
-    "@frctl/fractal": "^1.2.1"
+    "@frctl/fractal": "^1.2.1",
+    "chokidar": "^3.3.1",
+    "node-sass": "^4.14.0"
+  },
+  "scripts": {
+    "start": "node develop.js",
+    "build": "node build.js"
   }
 }
